--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -5394,7 +5394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -5421,7 +5421,7 @@
     "results.add(survived)\n",
     "\n",
     "results = pd.concat([Id, survived], axis=1)\n",
-    "results.to_csv('test')\n"
+    "results.to_csv('result.csv', index=False)\n"
    ]
   },
   {
