--- a/titanic_2.ipynb
+++ b/titanic_2.ipynb
@@ -2436,6 +2436,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hypothesis is that younger age will result in higher likelihood of survival especially when paired with Sex and looking at in bands for prediction vs specific age of each passenger."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
@@ -5661,8 +5668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO(Aaron): Verify information in the section and update if needed.\n",
-    "I have slightly modified your code to change both train and test sets."
+    "Hypothesis: More descriptive than class as doing research about the ship learned first letter indicates the level of the ship. Multiple levels mapped to a specific class. Also as the letters increment it reflects how far down below the top level you where. Note: lifeboats on the top level As noted earlier this is the field with the biggest number of missing data. Hypothesis is still valuable information to provide more prediction than just class."
    ]
   },
   {
