--- a/titanic_2.ipynb
+++ b/titanic_2.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Kaggle (team): **Maria Curie Skłodowska**\n",
     "\n",
-    "Kaggle: **guillaumethomas** **arondavis\n",
+    "Kaggle individual: **guillaumethomas**, **aaronldavis**, **abc11235**\n",
     "\n",
     "[Github Repo](https://github.com/guillaumethomas/kaggle_titanic)"
    ]
